--- a/Bakalauras/Bakalauras/Pages/Index.cshtml
+++ b/Bakalauras/Bakalauras/Pages/Index.cshtml
@@ -68,9 +68,9 @@
                     </div>
                     <div id="collapseOne" aria-labelledby="headingOne" data-parent="#accordionExample" class="collapse show">
                         <a class="block text-light nav-link" asp-page="/Mokytis/ThemeMenu">Realieji skaičiai</a>
-                        <a class="block text-light nav-link" asp-page="/Index">Procentai</a>
-                        <a class="block text-light nav-link" asp-page="/Index">Aritmetinė progresija</a>
-                        <a class="block text-light nav-link" asp-page="/Index">Geometrinė progresija</a>
+                        <a class="block text-light nav-link" asp-page="/Mokytis/ThemeMenu">Procentai</a>
+                        <a class="block text-light nav-link" asp-page="/Mokytis/ThemeMenu">Aritmetinė progresija</a>
+                        <a class="block text-light nav-link" asp-page="/Mokytis/ThemeMenu">Geometrinė progresija</a>
                     </div>
                 </div>
 
@@ -92,13 +92,13 @@
                         <h6 class="mb-0 font-weight-bold"><a href="#" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" class="d-block position-relative collapsed text-dark text-uppercase collapsible-link py-2">Lygtys, nelygybės ir jų sistemos</a></h6>
                     </div>
                     <div id="collapseThree" aria-labelledby="headingThree" data-parent="#accordionExample" class="collapse">
-                        <a class="block text-light nav-link" asp-page="/Index">Kvadratinės lygtys</a>
-                        <a class="block text-light nav-link" asp-page="/Index">Racionalios lygtys</a>
-                        <a class="block text-light nav-link" asp-page="/Index">Iracionalios lygtys</a>
-                        <a class="block text-light nav-link" asp-page="/Index">Rodiklinės lygtys</a>
-                        <a class="block text-light nav-link" asp-page="/Index">Logaritminės lygtys</a>
-                        <a class="block text-light nav-link" asp-page="/Index">Rodiklinės neligybės</a>
-                        <a class="block text-light nav-link" asp-page="/Index">Logaritminės neligybės</a>
+                        <a class="block text-light nav-link" asp-page="/Mokytis/ThemeMenu" asp-route-Title="Kvadratinės lygtys" asp-route-Text="Spręsti uždavinius su kvadratines išraiškos lygtimis.">Kvadratinės lygtys</a>
+                        <a class="block text-light nav-link" asp-page="/Mokytis/ThemeMenu" asp-route-Title="Racionalios lygtys" asp-route-Text="Spręsti uždavinius su Racionalios išraiškos lygtimis.">Racionalios lygtys</a>
+                        <a class="block text-light nav-link" asp-page="/Mokytis/ThemeMenu" asp-route-Title="Iracionalios lygtys" asp-route-Text="Spręsti uždavinius su Iracionalios išraiškos lygtimis.">Iracionalios lygtys</a>
+                        <a class="block text-light nav-link" asp-page="/Mokytis/ThemeMenu" asp-route-Title="Rodiklinės lygtys" asp-route-Text="Spręsti uždavinius su Rodiklinės išraiškos lygtimis.">Rodiklinės lygtys</a>
+                        <a class="block text-light nav-link" asp-page="/Mokytis/ThemeMenu" asp-route-Title="Logaritminės lygtys" asp-route-Text="Spręsti uždavinius su Logaritminės išraiškos lygtimis.">Logaritminės lygtys</a>
+                        <a class="block text-light nav-link" asp-page="/Mokytis/ThemeMenu" asp-route-Title="Rodiklinės neligybės" asp-route-Text="Spręsti uždavinius su kvadratines išraiškos lygtimis.">Rodiklinės neligybės</a>
+                        <a class="block text-light nav-link" asp-page="/Mokytis/ThemeMenu" asp-route-Title="Logaritminės neligybės" asp-route-Text="Spręsti uždavinius su kvadratines išraiškos lygtimis.">Logaritminės neligybės</a>
                     </div>
                 </div>
 
