--- a/Bakalauras/Bakalauras/Pages/Testai/CreateTest.cshtml
+++ b/Bakalauras/Bakalauras/Pages/Testai/CreateTest.cshtml
@@ -63,7 +63,7 @@
                             <thead>
                                 <tr>
                                     <th style="text-align:center" scope="col">Uždavinio sąlyga</th>
-                                    <th style="text-align:center" scope="col">Sunkumas</th>
+                                    <th style="text-align:center" scope="col">Lygis</th>
                                     <th style="text-align:center" scope="col">Tema</th>
                                     <th scope="col"></th>
                                 </tr>
