--- a/Bakalauras/Bakalauras/Pages/Testai/MyCompletedTestList.cshtml
+++ b/Bakalauras/Bakalauras/Pages/Testai/MyCompletedTestList.cshtml
@@ -39,7 +39,7 @@
                                     <td>@Html.DisplayFor(f => f.Completes[i].Finished)</td>
                                     @{double Grade = 10 / (double)@Model.Completes[i].TotalTasks * (double)totalCorrectAnswers;}
                                     <td>@Grade</td>
-                                    <td><a class="btn btn-success btn-lg te" style="margin-bottom: 5px;" asp-page="" asp-route-ID="@Model.Completes[i].Id">Peržiureti atsakymus</a></td>
+                                    <td><a class="btn btn-success btn-lg te" style="margin-bottom: 5px;" asp-page="/Testai/MyTestResult" asp-route-ID="@Model.Completes[i].Id">Peržiureti atsakymus</a></td>
                                 </tr>
                                 }
                             </tbody>
