--- a/Bakalauras/Bakalauras/Pages/Uzdaviniai/CreateTask.cshtml
+++ b/Bakalauras/Bakalauras/Pages/Uzdaviniai/CreateTask.cshtml
@@ -150,13 +150,14 @@
                         <h3>Papildoma informacija</h3>
                         <label for="tema"><b>Uždavinio tema:</b></label>
                         <select class="custom-select" style="width:400px;" name="tema" id="tema">
-                            <option value="Realieji skaičiai ir skaičiavimai">Realieji skaičiai ir skaičiavimai</option>
-                            <option value="Skaitiniai ir raidiniai reiškiniai">Skaitiniai ir raidiniai reiškiniai</option>
-                            <option value="Lygtys, nelygybės ir jų sistemos">Lygtys, nelygybės ir jų sistemos</option>
-                            <option value="Trigonometrija">Trigonometrija</option>
-                            <option value="Difrencialinis skaičiavimas">Difrencialinis skaičiavimas</option>
-                            <option value="Kombinatorika ir tikimybių teorija">Kombinatorika ir tikimybių teorija</option>
-                            <option value="Atsitiktinis dydis. Statistika">Atsitiktinis dydis. Statistika</option>
+                            <option value="Realieji skaičiai">Realieji skaičiai</option>
+                            <option value="Procentai">Procentai</option>
+                            <option value="Racionalieji reiškiniai">Racionalieji reiškiniai</option>
+                            <option value="Iracionalieji reiškiniai">Iracionalieji reiškiniai</option>
+                            <option value="Logoritminiai reiškiniai">Logoritminiai reiškiniai</option>
+                            <option value="Kvadratinės lygtys">Kvadratinės lygtys</option>
+                            <option value="Racionalios lygtys">Racionalios lygtys</option>
+                            <option value="Trigonometriniai reiškiniai">Trigonometriniai reiškiniai</option>
                         </select><br><br>
 
                         <label for="tema"><b>Uždavinio sudetingumas:</b></label>
