--- a/Bakalauras/Bakalauras/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/Bakalauras/Bakalauras/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model AccessDeniedModel
 @{
-    ViewData["Title"] = "Access denied";
+    ViewData["Title"] = "Puslapis nepasiekiamas";
 }
 
 <header>
     <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">You do not have access to this resource.</p>
+    <p class="text-danger"><h3>Jūs negalite pasiekti šio puslapio.</h3></p>
 </header>
