--- a/Bakalauras/Bakalauras/Pages/Mokytis/SolveTask.cshtml
+++ b/Bakalauras/Bakalauras/Pages/Mokytis/SolveTask.cshtml
@@ -14,8 +14,11 @@
     }
 </style>
 
-<input type="hidden" id="start" name="start" asp-for="Complete.Started" />
-<input type="hidden" id="time" name="time" asp-for="Test.Time" />
+@if (Model.Test != null)
+{
+    <input type="hidden" id="start" name="start" asp-for="Complete.Started" />
+    <input type="hidden" id="time" name="time" asp-for="Test.Time" />
+}
 
 <form method="post">
     <div class="container">
@@ -23,13 +26,26 @@
             <div class="col-lg-12 mx-auto">
                 <div class="card">
                     <div class="card-body">
-                        <h2 style="text-align:center">@Model.Test.TestName</h2>
-                        <hr />
-                        <h2 style="text-align:left">Klausimas @((Model.Index+1).ToString() + "/" + Model.Complete.TotalTasks.ToString())</h2>
-                        <h2 id="timer"></h2>
-                        <div class="progress">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: @(((100/Model.Complete.TotalTasks) * Model.Index).ToString() + "%")"></div>
-                        </div>
+                        @if (Model.Test != null)
+                        {
+                            <h2 style="text-align:center">@Model.Test.TestName</h2>
+                            <hr />
+                            <h2 style="text-align:left">Klausimas @((Model.Index + 1).ToString() + "/" + Model.Complete.TotalTasks.ToString())</h2>
+                            <h2 id = "timer"></h2>
+                        }
+
+                        @if (Model.Test == null)
+                        {
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: @(((100 / Model.Tasks.Count()) * Model.Index).ToString() + "%")"></div>
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: @(((100 / Model.Complete.TotalTasks) * Model.Index).ToString() + "%")"></div>
+                            </div>
+                        }
                         <hr />
                         <div>
                             <label><b>Uždavinio sudėtingumas:</b> @Model.Tasks[Model.Index].Level</label>
@@ -76,9 +92,13 @@
                         </div>
                         <hr />
                         <div class="form-group">
-                            @if (Model.Index + 1 == Model.Complete.TotalTasks)
+                            @if (Model.Test != null && Model.Index + 1 == Model.Complete.TotalTasks)
                             {
                                 <button class="btn btn-danger btn-lg te" style="margin-bottom: 15px;" asp-route-ID="@Model.Test.Id" asp-page-handler="EndTest">Baigti Testa </button>
+                            }
+                            else if (Model.Test == null)
+                            {
+                                <button class="btn btn-primary btn-lg te" style="margin-bottom: 15px;" asp-route-ID="" asp-route-fromPublic="true" asp-page-handler="Answer">Atsakyti </button>
                             }
                             else
                             {
@@ -91,7 +111,7 @@
                                 Mokytojo pagalba
                             </button>
                         </div>
-                        
+
                     </div>
                 </div>
                 <partial name="~/Pages/General/HelpPartial.cshtml" />
@@ -143,31 +163,31 @@
         </div>
     </div>
 </form>
-    <script>
-        $(document).ready(function () {
-            var startTime = new Date($('#start').val());
-            var setTime = $('#time').val();
-            var currentTime = new Date();
-            var difference = currentTime.getTime() - startTime.getTime();
-            var differenceInSeconds = Math.floor(difference / 1000);
-            var targetTime = ((setTime * 60) - differenceInSeconds);
+<script>
+    $(document).ready(function () {
+        var startTime = new Date($('#start').val());
+        var setTime = $('#time').val();
+        var currentTime = new Date();
+        var difference = currentTime.getTime() - startTime.getTime();
+        var differenceInSeconds = Math.floor(difference / 1000);
+        var targetTime = ((setTime * 60) - differenceInSeconds);
 
-            updateTimer();
+        updateTimer();
 
-            var timerInterval = setInterval(updateTimer, 1000);
+        var timerInterval = setInterval(updateTimer, 1000);
 
-            function updateTimer() {
-                if (targetTime <= 0) {
-                    // Timer has ended
-                    clearInterval(timerInterval);
-                    alert("Timer has ended!");
-                } else {
-                    // Update timer display
-                    var minutes = Math.floor(targetTime / 60);
-                    var seconds = targetTime % 60;
-                    $("#timer").text("Liko laiko: " + minutes + ":" + (seconds < 10 ? "0" : "") + seconds);
-                    targetTime--;
-                }
+        function updateTimer() {
+            if (targetTime <= 0) {
+                // Timer has ended
+                clearInterval(timerInterval);
+                alert("Timer has ended!");
+            } else {
+                // Update timer display
+                var minutes = Math.floor(targetTime / 60);
+                var seconds = targetTime % 60;
+                $("#timer").text("Liko laiko: " + minutes + ":" + (seconds < 10 ? "0" : "") + seconds);
+                targetTime--;
             }
-        });
-    </script>
+        }
+    });
+</script>
