--- a/Bakalauras/Bakalauras/Pages/Privacy.cshtml
+++ b/Bakalauras/Bakalauras/Pages/Privacy.cshtml
@@ -1,8 +1,7 @@
 ﻿@page
 @model PrivacyModel
 @{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Autoriu teises";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<h2>Šį darba atliko KTU IFF-9/9 grupės studentas, Robertas Trumpauskas.</h2>
