--- a/Bakalauras/Bakalauras/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Bakalauras/Bakalauras/Areas/Identity/Pages/Account/Login.cshtml
@@ -10,16 +10,16 @@
     <div class="col-md-4">
         <section>
             <form id="account" method="post">
-                <h4>Prisijungite prie savo paskyros</h4>
+                <h4>Prisijunkite prie savo paskyros</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
-                    <label>E-Pasto Adresas</label>
+                    <label>E-Pašto Adresas</label>
                     <input asp-for="Input.Email" class="form-control" />
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label>Slaptazodis</label>
+                    <label>Slaptažodis</label>
                     <input asp-for="Input.Password" class="form-control" />
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
