--- a/Bakalauras/Bakalauras/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Bakalauras/Bakalauras/Areas/Identity/Pages/Account/Register.cshtml
@@ -13,7 +13,7 @@
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label>El-Pastas</label>
+                <label>El-Paštas</label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
@@ -28,19 +28,19 @@
                 <span asp-validation-for="Input.Surname" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label for="role"><b>Paskyros Tipas:</b></label><br>
+                <label for="role">Paskyros Tipas</label><br>
                 <select class="custom-select" style="width:200px;" name="role" id="role">
                     <option value="Mokinys">Mokinys</option>
                     <option value="Mokytojas">Mokytojas</option>
                 </select><br><br>
             </div>
             <div class="form-group">
-                <label>Slaptazodis</label>
+                <label>Slaptažodis</label>
                 <input asp-for="Input.Password" class="form-control" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label>Pakartoti slaptazodi</label>
+                <label>Pakartoti slaptažodi</label>
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
