--- a/Bakalauras/Bakalauras/Pages/Shared/_Layout.cshtml
+++ b/Bakalauras/Bakalauras/Pages/Shared/_Layout.cshtml
@@ -27,12 +27,12 @@
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/jsxgraph/1.5.0/jsxgraph.css" />
     <style>
         .navbar {
-            background-color: #3e363f;
+            background-color: #006bde;
         }
 
         body {
-            background: -webkit-linear-gradient(to left, #11998E, #38EF7D);
-            background: linear-gradient(to left, #11998E, #38EF7D);
+            background-color: #ffffff;
+            background-image: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
             min-height: 100vh;
         }
     </style>
