--- a/Bakalauras/Bakalauras/Pages/Uzdaviniai/MyTaskList.cshtml
+++ b/Bakalauras/Bakalauras/Pages/Uzdaviniai/MyTaskList.cshtml
@@ -31,7 +31,6 @@
                                     <th scope="col">#</th>
                                     <th scope="col">Uždavinys</th>
                                     <th scope="col"></th>
-                                    <th scope="col"></th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -40,9 +39,11 @@
                                 {
                                     <tr>
                                         <th scope="row">@i</th>
-                                        <td><p class="tttt"><span>@Html.DisplayFor(f => item.TaskString)</span></p></td>
-                                        <td><a class="btn btn-success btn-lg te" style="margin-bottom: 15px; margin-left: 15px; margin-right: 15px;" asp-page="/Mokytis/SolveTask">Redaguoti </a></td>
-                                        <td><button class="btn btn-danger btn-lg te" style="margin-bottom: 15px;" asp-page-handler="Delete" asp-route-id="@item.Id" onclick="return confirm('Ar tikrai norite pašalinti uždavinį?')">Pašalinti </button></td>
+                                        <td style="text-align: center;"><p class="tttt"><span>@Html.DisplayFor(f => item.TaskString)</span></p></td>
+                                        <td style="text-align: right; column-width: 300px;">
+                                            <a class="btn btn-success btn-lg te" style="margin-bottom: 15px; margin-left: 15px; margin-right: 15px;" asp-page="/Mokytis/SolveTask">Redaguoti </a>
+                                            <button class="btn btn-danger btn-lg te" style="margin-bottom: 15px;" asp-page-handler="Delete" asp-route-id="@item.Id" onclick="return confirm('Ar tikrai norite pašalinti uždavinį?')">Pašalinti </button>
+                                        </td>
                                     </tr>
                                     i++;
                                 }
